[package]
name = "forge-subtitle"
version = "0.1.0"
edition = "2021"
description = "Subtitle decomposition into tiles — the SubForge pattern, generalized"
license = "MIT"
repository = "https://github.com/SuperInstance/forge-subtitle"
keywords = ["subtitle", "srt", "vtt", "subforge", "tiles"]
categories = ["parser-implementations", "multimedia"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
